@@ -1,4 +1,5 @@
 28 Jan 2018
+update: catalog.php formatting when no peers
 add: catalog.php
 update: alphabatize nav menu links
 update: wiki highlight active tab
